[gd_scene load_steps=2 format=3 uid="uid://ij3geg2dso74"]

[ext_resource type="Script" path="res://scripts/templates/interface/animated_text.gd" id="1"]

[node name="AnimatedText" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.054902, 0.054902, 0.054902, 1)

[node name="Content" type="VBoxContainer" parent="BackgroundColor"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Line1" type="Label" parent="BackgroundColor/Content"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Sample text"
horizontal_alignment = 1

[node name="Line2" type="Label" parent="BackgroundColor/Content"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Something else"
horizontal_alignment = 1
